<resources>
    <string name="app_name">E-Queue</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="askRegister">First time?</string>
    <string name="register"><a href="http://www.google.com">Click here to Register</a></string>
    <string name="title_activity_register">Register</string>
    <string name="registration">Registration</string>
    <string name="termAndCondition">I have read and agree with the</string>
    <string name="termAndCondition2"><a href="http://www.google.com">Term and Condition</a></string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="pref_file" />
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="description"></string>
    <string name="no_record">No record</string>
    <string name="title_activity_organization">OrganizationActivity</string>
    <string name="booking_time">Booking Time:</string>
</resources>
